--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" />
-
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block head %} {% endblock %}
+{% block body %}
     <div class="content">
         <h1>Gordao Cyber Bullet 1.0</h1>
         <table>
@@ -27,5 +20,4 @@
             <input type="submit" name="Add " id="btn_add"/>
         </form>
     </div>
-</body>
-</html>
+{% endblock %}
