Novas coisas, como rotas e banco

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,21 +3,32 @@
 {% block body %}
     <div class="content">
         <h1>Gordao Cyber Bullet 1.0</h1>
+        {% if tasks | length < 1 %}
+        <h3> Não há tarefas, crie uma aqui</h3>
+        {% else %}
+
         <table>
             <tr>
                 <th>Task</th>
                 <th>Added</th>
                 <th>Actions</th>
             </tr>
+            {% for task in tasks %}
             <tr>
-                <td>Content</td>
-                <td>Data</td>
-                <td>More</td>
+                <td>{{task.content}}</td>
+                <td>{{task.created.strftime("%Y-%m-%d")}}</td>
+                <td>
+                    <a href="/delete/{{task.id}}">Deletar</a>
+                    <br/>
+                    <a href="/update/{{task.id}}">Editar</a>
+                </td>
             </tr>
+            {% endfor %}
         </table>
-        <form action="">
-            <input type="text" name="Content" id="Content"/>
-            <input type="submit" name="Add " id="btn_add"/>
+        {% endif %}
+        <form action="/" method="POST">
+            <input type="text" name="content" id="content" />
+            <input type="submit" name="Add " id="btn_add" />
         </form>
     </div>
 {% endblock %}
