--- a/static/styles.css
+++ b/static/styles.css
@@ -1,73 +1,260 @@
-/* styles.css */
-body {
-  background-color: #001f3f; /* Azul-marinho */
-  color: #ffdc00; /* Amarelo vibrante para contraste */
-  font-family: 'Courier New', Courier, monospace; /* Estilo retro */
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+html {
+  background: #4e92a5;
+}
+
+.container {
   align-items: center;
-  height: 100vh;
+  background-size: 300px;
+  background-position: center;
+  display: flex;
+  flex-flow: column wrap;
+  font-family: sans-serif;
+  height: calc(100vh - 16px);
+  min-height: 300px;
+  justify-content: center;
+  position: relative;
+  z-index: 0;
 }
 
-h1 {
-  font-size: 3em;
-  text-transform: uppercase;
-  color: #ff851b; /* Laranja vibrante */
-  letter-spacing: 5px;
-  text-shadow: 2px 2px 4px #000000; /* Sombra para dar efeito retrô */
+.container button {
+  cursor: pointer;
 }
 
-p {
-  font-size: 1.2em;
-  line-height: 1.5;
-  color: #7fdbff; /* Azul claro contrastante */
-  max-width: 800px;
-  text-align: center;
-  text-shadow: 1px 1px 3px #000000;
+.watch-band {
+  background: #2d2f2f; /* darken($casio-color,20%) */
+  height: 40px;
+  width: 130px;
 }
 
-.content {
-  flex: 1; /* Faz o conteúdo ocupar o espaço restante */
+.top {
+  border-radius: 80px 80px 80px 0px / 200px 200px 0px 0px;
 }
 
-footer {
-  background-color: #001f3f; /* Azul marinho */
-  color: #ffffff; /* Texto branco */
-  text-align: center; /* Centraliza o texto */
-  padding: 10px; /* Espaço interno */
-  position: relative; /* Para controlar o posicionamento, se necessário */
-  bottom: 0; /* Posiciona o rodapé na parte inferior da página */
-  width: 100%; /* Faz o rodapé ocupar toda a largura */
-  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.5); /* Sombra para um leve efeito 3D */
+.bottom {
+  border-radius: 0px 0px 80px 80px / 0px 0px 200px 200px;
 }
 
-/* Estilos para a tabela */
-table {
-  width: 100%; /* Ocupa toda a largura disponível */
-  border-collapse: collapse; /* Remove espaços entre as bordas das células */
-  margin-top: 20px; /* Espaço acima da tabela */
+.watch-frame {
+  align-items: center;
+  background: #333f3f; /* darken($casio-color,10%) */
+  border-radius: 20px;
+  color: white;
+  display: flex;
+  height: 180px;
+  width: 170px;
 }
 
-/* Estilos para cabeçalho da tabela */
-th {
-  background-color: darkcyan; /* Cor de fundo do cabeçalho */
-  color: white; /* Cor do texto do cabeçalho */
-  padding: 10px; /* Espaço interno no cabeçalho */
+.watch-frame .right-operations {
+  display: flex;
+  flex-flow: column;
 }
 
-/* Estilos para células da tabela */
-td {
-  background-color: rgba(255, 255, 255, 0.1); /* Fundo semi-transparente nas células */
-  color: white; /* Cor do texto nas células */
-  padding: 10px; /* Espaço interno nas células */
-  border: 1px solid darkcyan; /* Borda nas células */
+.watch-frame .operation {
+  align-items: center;
+  color: #f4ea7c;
+  display: flex;
+  font-size: 10px;
+  height: calc(180px / 4);
+  list-style-type: none;
+  position: relative;
+  width: 5px;
 }
 
-/* Efeito ao passar o mouse sobre as células da tabela */
-tr:hover td {
-  background-color: darkcyan; /* Cor de fundo quando o mouse passa */
-  color: white; /* Cor do texto ao passar o mouse */
+.watch-frame .operation button {
+  background: #394443; /* $casio-color */
+  border: none;
+  height: 15px;
+  width: 2px;
+  z-index: -1;
+}
+
+.right-operations span {
+  left: -3px;
+  position: absolute;
+  top: 16px;
+}
+
+.right-operations button {
+  border-radius: 0px 5px 5px 0px;
+}
+
+.left-operations span {
+  left: 1px;
+  font-size: 8px;
+  position: absolute;
+}
+
+.left-operations button {
+  border-radius: 5px 0px 0px 5px;
+  left: -7px;
+  position: absolute;
+}
+
+.watch {
+  background: #3f4239; /* darken(#3f4239,5%) */
+  border-radius: 15px;
+  box-sizing: border-box;
+  height: 160px;
+  margin: 0 auto;
+  overflow: hidden;
+  padding: 5px;
+  width: 150px;
+}
+
+.screen-frame {
+  background: black;
+  border-radius: 15px 15px 8px 8px;
+  box-shadow: inset 0px 0px 0px 2px #394443, 0px 0px 0px 1px #333f3f; /* darken($casio-color,10%) */
+  height: 70px;
+  position: relative;
+  width: 140px;
+}
+
+.screen-frame .frame-header {
+  color: white;
+  display: flex;
+  font-family: 'Share Tech Mono', monospace;
+  font-size: 12px;
+  justify-content: space-around;
+  list-style-type: none;
+  line-height: 20px;
+}
+
+.screen-frame .frame-header * {
+  margin: 0;
+}
+
+.screen-frame .week-days {
+  display: flex;
+  font-size: 7px;
+  list-style-type: none;
+  left: 20px;
+  position: absolute;
+  top: 16px;
+}
+
+.screen-frame .week-days li {
+  margin: 2px;
+}
+
+.screen-frame .left-instructions {
+  color: #f4ea7c;
+  font-size: 7px;
+  list-style-type: none;
+}
+
+.screen-frame .left-instructions li {
+  position: absolute;
+  transform: rotate(90deg);
+}
+
+.screen-frame .left-instructions li:nth-child(1) {
+  top: 20px;
+}
+
+.screen-frame .left-instructions li:nth-child(2) {
+  top: 50px;
+}
+
+.screen-frame .right-instructions {
+  color: #f4ea7c;
+  font-size: 7px;
+  list-style-type: none;
+  position: absolute;
+  right: 17px;
+  top: 14px;
+}
+
+.screen-frame .right-instructions li {
+  position: absolute;
+  transform: rotate(270deg);
+}
+
+.screen-frame .right-instructions li:nth-child(1) {
+  top: 41px;
+}
+
+.screen-frame .right-instructions li:nth-child(2) {
+  top: 23px;
+}
+
+.screen-frame .right-instructions li:nth-child(3) {
+  right: -17px;
+  top: 0px;
+}
+
+.screen {
+  background: #aaa196;
+  border-radius: 2px;
+  box-shadow: inset 0px 0px 5px 4px rgba(0, 0, 0, .2);
+  box-sizing: border-box;
+  color: black;
+  font-size: 20px;
+  font-family: "Share Tech Mono", sans-serif;
+  height: 40px;
+  line-height: 45px;
+  overflow: hidden;
+  position: absolute;
+  right: 20px;
+  top: 25px;
+  text-align: right;
+  width: 100px;
+}
+
+.screen .main {
+  margin-right: 5px;
+}
+
+.screen .pm {
+  font-size: 9px;
+  left: 3px;
+  position: absolute;
+  top: -8px;
+}
+
+.screen .day {
+  background: rgb(20, 20, 20);
+  height: 3px;
+  left: 2px;
+  position: absolute;
+  top: 3px;
+  width: 10px;
+}
+
+.buttons {
+  background: black;
+  border-radius: 8px 8px 15px 15px;
+  box-shadow: inset 0px 0px 0px 1px white, 0px 0px 0px 2px black;
+  font-size: 10px;
+  height: 70px;
+  margin-top: 10px;
+  overflow: hidden;
+  width: 140px;
+}
+
+.buttons .row {
+  color: white;
+  display: flex;
+  height: calc(70px / 3);
+  justify-content: space-around;
+  width: 140px;
+}
+
+.buttons .row li {
+  align-items: center;
+  border-width: 1px;
+  border-style: solid;
+  border-color: white;
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  width: calc(140px / 4);
+}
+
+.buttons .row button {
+  border-radius: 5px;
+  background: white;
+  height: 10px;
+  margin-left: 2px;
+  width: 18px;
 }
