Aparentemente finalizei, agora só polir.

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,260 +1,107 @@
-html {
-  background: #4e92a5;
-}
-
-.container {
-  align-items: center;
-  background-size: 300px;
-  background-position: center;
-  display: flex;
-  flex-flow: column wrap;
-  font-family: sans-serif;
-  height: calc(100vh - 16px);
-  min-height: 300px;
-  justify-content: center;
-  position: relative;
-  z-index: 0;
-}
-
-.container button {
-  cursor: pointer;
-}
-
-.watch-band {
-  background: #2d2f2f; /* darken($casio-color,20%) */
-  height: 40px;
-  width: 130px;
-}
-
-.top {
-  border-radius: 80px 80px 80px 0px / 200px 200px 0px 0px;
-}
-
-.bottom {
-  border-radius: 0px 0px 80px 80px / 0px 0px 200px 200px;
-}
-
-.watch-frame {
-  align-items: center;
-  background: #333f3f; /* darken($casio-color,10%) */
-  border-radius: 20px;
-  color: white;
-  display: flex;
-  height: 180px;
-  width: 170px;
-}
-
-.watch-frame .right-operations {
-  display: flex;
-  flex-flow: column;
-}
-
-.watch-frame .operation {
-  align-items: center;
-  color: #f4ea7c;
-  display: flex;
-  font-size: 10px;
-  height: calc(180px / 4);
-  list-style-type: none;
-  position: relative;
-  width: 5px;
-}
-
-.watch-frame .operation button {
-  background: #394443; /* $casio-color */
-  border: none;
-  height: 15px;
-  width: 2px;
-  z-index: -1;
-}
-
-.right-operations span {
-  left: -3px;
-  position: absolute;
-  top: 16px;
-}
-
-.right-operations button {
-  border-radius: 0px 5px 5px 0px;
-}
-
-.left-operations span {
-  left: 1px;
-  font-size: 8px;
-  position: absolute;
-}
-
-.left-operations button {
-  border-radius: 5px 0px 0px 5px;
-  left: -7px;
-  position: absolute;
-}
-
-.watch {
-  background: #3f4239; /* darken(#3f4239,5%) */
-  border-radius: 15px;
-  box-sizing: border-box;
-  height: 160px;
-  margin: 0 auto;
-  overflow: hidden;
-  padding: 5px;
-  width: 150px;
-}
-
-.screen-frame {
-  background: black;
-  border-radius: 15px 15px 8px 8px;
-  box-shadow: inset 0px 0px 0px 2px #394443, 0px 0px 0px 1px #333f3f; /* darken($casio-color,10%) */
-  height: 70px;
-  position: relative;
-  width: 140px;
-}
-
-.screen-frame .frame-header {
-  color: white;
-  display: flex;
-  font-family: 'Share Tech Mono', monospace;
-  font-size: 12px;
-  justify-content: space-around;
-  list-style-type: none;
-  line-height: 20px;
-}
-
-.screen-frame .frame-header * {
+/* Estilos globais com tema Dracula */
+body {
+  font-family: 'Courier New', Courier, monospace;
+  background-color: #282a36;
+  color: #f8f8f2;
   margin: 0;
-}
-
-.screen-frame .week-days {
-  display: flex;
-  font-size: 7px;
-  list-style-type: none;
-  left: 20px;
-  position: absolute;
-  top: 16px;
-}
-
-.screen-frame .week-days li {
-  margin: 2px;
-}
-
-.screen-frame .left-instructions {
-  color: #f4ea7c;
-  font-size: 7px;
-  list-style-type: none;
-}
-
-.screen-frame .left-instructions li {
-  position: absolute;
-  transform: rotate(90deg);
-}
-
-.screen-frame .left-instructions li:nth-child(1) {
-  top: 20px;
-}
-
-.screen-frame .left-instructions li:nth-child(2) {
-  top: 50px;
-}
-
-.screen-frame .right-instructions {
-  color: #f4ea7c;
-  font-size: 7px;
-  list-style-type: none;
-  position: absolute;
-  right: 17px;
-  top: 14px;
-}
-
-.screen-frame .right-instructions li {
-  position: absolute;
-  transform: rotate(270deg);
-}
-
-.screen-frame .right-instructions li:nth-child(1) {
-  top: 41px;
-}
-
-.screen-frame .right-instructions li:nth-child(2) {
-  top: 23px;
-}
-
-.screen-frame .right-instructions li:nth-child(3) {
-  right: -17px;
-  top: 0px;
-}
-
-.screen {
-  background: #aaa196;
-  border-radius: 2px;
-  box-shadow: inset 0px 0px 5px 4px rgba(0, 0, 0, .2);
-  box-sizing: border-box;
-  color: black;
-  font-size: 20px;
-  font-family: "Share Tech Mono", sans-serif;
-  height: 40px;
-  line-height: 45px;
-  overflow: hidden;
-  position: absolute;
-  right: 20px;
-  top: 25px;
-  text-align: right;
-  width: 100px;
-}
-
-.screen .main {
-  margin-right: 5px;
-}
-
-.screen .pm {
-  font-size: 9px;
-  left: 3px;
-  position: absolute;
-  top: -8px;
-}
-
-.screen .day {
-  background: rgb(20, 20, 20);
-  height: 3px;
-  left: 2px;
-  position: absolute;
-  top: 3px;
-  width: 10px;
-}
-
-.buttons {
-  background: black;
-  border-radius: 8px 8px 15px 15px;
-  box-shadow: inset 0px 0px 0px 1px white, 0px 0px 0px 2px black;
-  font-size: 10px;
-  height: 70px;
-  margin-top: 10px;
-  overflow: hidden;
-  width: 140px;
-}
-
-.buttons .row {
-  color: white;
-  display: flex;
-  height: calc(70px / 3);
-  justify-content: space-around;
-  width: 140px;
-}
-
-.buttons .row li {
-  align-items: center;
-  border-width: 1px;
-  border-style: solid;
-  border-color: white;
+  padding: 0;
   display: flex;
   justify-content: center;
-  list-style-type: none;
-  width: calc(140px / 4);
+  align-items: center;
+  height: 100vh;
 }
 
-.buttons .row button {
+/* Centralizar e estilizar o título */
+h1 {
+  color: #bd93f9;
+  margin: 0;
+  font-size: 2em;
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: #50fa7b;
+}
+
+a:hover {
+  color: #8be9fd;
+}
+
+input[type="text"], input[type="submit"] {
+  padding: 10px;
+  margin: 10px 0;
+  font-size: 16px;
   border-radius: 5px;
-  background: white;
-  height: 10px;
-  margin-left: 2px;
-  width: 18px;
+  border: 1px solid #6272a4;
+  background-color: #44475a;
+  color: #f8f8f2;
+}
+
+input[type="submit"] {
+  background-color: #50fa7b;
+  color: #282a36;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+input[type="submit"]:hover {
+  background-color: #8be9fd;
+}
+
+/* Estilo da classe content */
+.content {
+  background-color: #44475a;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  width: 400px;
+  text-align: center;
+}
+
+/* Tabela de tarefas */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+table, th, td {
+  border: 1px solid #6272a4;
+}
+
+th, td {
+  padding: 10px;
+  text-align: left;
+}
+
+th {
+  background-color: #bd93f9;
+  color: #282a36;
+}
+
+td {
+  background-color: #44475a;
+  color: #f8f8f2;
+}
+
+td a {
+  margin-right: 10px;
+}
+
+/* Ajustes no input do formulário */
+input[type="text"] {
+  width: calc(100% - 22px);
+}
+
+/* Responsividade */
+@media (max-width: 600px) {
+  .content {
+      width: 90%;
+  }
+
+  table {
+      font-size: 14px;
+  }
 }
