--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" />
-    <title>Document</title>
+    <title>{% block title %}Document{% endblock %}</title>
     {% block head %} {% endblock %}
 </head>
 <body>
-    {% block body %} {% endblock %}
+    <div class="container">
+        {% block body %} {% endblock %}
+    </div>
 </body>
 </html>
