Aparentemente finalizei, agora só polir. 2

--- a/templates/healtcheck.html
+++ b/templates/healtcheck.html
@@ -1,15 +1,11 @@
 {% extends 'base.html' %}
 {% block head %} 
-<title>Healthcheck</title>
+<title> Healthcheck </title>
 {% endblock %}
 {% block body %}
 <body>
     <div class="content">
-        <h1>Teste app 1.0</h1>
+        <h1>Status Ok</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium necessitatibus quas neque quisquam quaerat vero unde ipsam. Nihil reprehenderit numquam vel, animi deleniti ipsam, commodi, sed inventore cumque eligendi optio!</p>
     </div>
-
-    <footer>
-        HEALTHCHECK2
-    </footer>
-    {% endblock %}
+{% endblock %}
